deploy/workloads/hospital-frontend/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-frontend
spec:
  replicas: 3
