deploy/workloads/hospital-frontend/overlays/prod/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hospital-web-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      hostname: benhvien.teamdevops.shop
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospital-web-route
spec:
  parentRefs:
    - name: hospital-web-gateway
  hostnames:
    - benhvien.teamdevops.shop
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: hospital-backend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hospital-frontend
          port: 80
